# orbify

./: .env  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.override.yml  docker-compose.yml
projects/: Dockerfile  README.md  alembic.ini  pyproject.toml
projects/alembic/: env.py
projects/alembic/versions/: 2025_01_11_0000-000000000000_init_migration.py  2025_01_11_2336-dec9fa322ab6_add_project_model.py
projects/orbify_projects/: main.py
projects/orbify_projects/api/: dependencies.py  health.py  main.py  projects.py
projects/orbify_projects/core/: config.py
projects/orbify_projects/db/: crud.py  session.py
projects/orbify_projects/models/: __init__.py  project.py
projects/orbify_projects/schemas/: base.py  geojson.py  projects.py
projects/tests/unit/: conftest.py  test_main.py
projects/tests/unit/api/: conftest.py  test_dependencies.py  test_health.py  test_projects.py
