[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "orbify-projects"
version = "0.1.0"
description = ""
authors = ["Marcin Skrobczyński <marcin@skrobczynski.pl>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["standard"], version = "^0.115.6"}
pydantic = "^2.10.5"
starlette = "^0.41.3"
uvicorn = "^0.34.0"
pydantic-settings = "^2.7.1"
alembic = "^1.14.0"
sqlalchemy = "^2.0.37"
psycopg = {extras = ["binary"], version = "^3.2.3"}
geojson-pydantic = "^1.2.0"

[tool.ruff]
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "UP", # pyupgrade
    "I", # isort
    "B", # flake8-bugbear
    "A", # flake8-builtins
    "C4", # flake8-comprehensions
    "T10", # flake8-debugger
    "T20", # flake8-print
    "SIM", # flake8-simplify
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
